# knowledge_mcp

./: .env.example  README.md  docker-compose.qdrant.yml  install.sh  project.md  pyproject.toml  requirements.txt  start.sh
deploy/: nginx.content-memory-mcp.conf.example
scripts/: install_smoke.py  rebuild_local_rag.py  upload_local_files.py
src/content_memory_mcp/: __init__.py  http_server.py  jobs.py  main.py  notes_utils.py  paths.py  prompts.py  rag.py  resources.py  server.py  tooling.py
src/content_memory_mcp/services/: articles.py  notes.py  uploads.py  weixin.py
tests/: conftest.py  test_articles_explicit_tools.py  test_articles_jobs.py  test_articles_service.py  test_jobs_hardening.py  test_mcp_http.py  test_mcp_stdio.py  test_notes_service.py  test_rag_provider.py  test_weixin_job_queue.py  test_weixin_service.py  test_weixin_stability.py  test_weixin_wespy_parity.py
